<resources>
    <string name="app_name">Weather App</string>
    <string name="locations">Locations</string>
    <string name="condtion">Condtion</string>
    <string name="location_name">Location Name</string>
    <string name="feels_like">Feels Like</string>
    <string name="_22">22</string>
    <string name="wind_degree">Wind Degree</string>
    <string name="_5_10_30">5:10:30</string>
    <string name="visibility">Visibility</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="condition_temp_min_temp_max">condition temp min / temp max</string>
    <string name="lon_lat">lon lat</string>
</resources>