<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <TextView
        android:id="@+id/locationNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/location_name" />

    <TextView
        android:id="@+id/lonlatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/lon_lat" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="85sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/_22" />

    <TextView
        android:id="@+id/mix_max_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/condition_temp_min_temp_max" />
    <LinearLayout
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/conditionImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/condtion"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:text="@string/feels_like"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/feelLikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/_22"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/humidityImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/condtion"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/humidity"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/_22"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pressureImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/condtion"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/air_pressure"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pressureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/_22"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/windSpeedImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/condtion"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:text="@string/wind_speed"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/windSpeedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:text="@string/_22"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/visibilityImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/condtion"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:text="@string/visibility"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/visibilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:textColor="@color/white"
                android:text="@string/_5_10_30"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/windDegImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/condtion"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:text="@string/wind_degree"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/windDegTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:textColor="@color/white"
                android:text="@string/_22"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal">-->


<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="1"-->
<!--            android:layout_margin="10dp"-->
<!--            android:gravity="center"-->
<!--            android:layout_column="1"-->
<!--            android:orientation="vertical">-->

<!--            <ImageView-->
<!--                android:id="@+id/sunriseImage"-->
<!--                android:layout_width="30dp"-->
<!--                android:textColor="@color/white"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_margin="2dp"-->
<!--                android:contentDescription="@string/condtion"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:src="@drawable/logo" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_margin="2dp"-->
<!--                android:text="Sunrise"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/sunriseTextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_margin="2dp"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="5:10:30"-->
<!--                android:textSize="16sp" />-->

<!--        </LinearLayout>-->

<!--        &lt;!&ndash; Time &ndash;&gt;-->
<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_row="1"-->
<!--            android:layout_margin="10dp"-->
<!--            android:gravity="center"-->
<!--            android:layout_column="2"-->
<!--            android:orientation="vertical">-->

<!--            <ImageView-->
<!--                android:id="@+id/sunsetImage"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_margin="2dp"-->
<!--                android:contentDescription="@string/condtion"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:src="@drawable/logo" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="Sunset"-->
<!--                android:layout_margin="2dp"-->
<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/sunsetTextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_margin="2dp"-->
<!--                android:textColor="@color/white"-->
<!--                android:text="5:10:30"-->
<!--                android:textSize="16sp" />-->

<!--        </LinearLayout>-->

<!--    </LinearLayout>-->
</LinearLayout>
